Refactor code for improved readability and update CORS configuration to allow additional origin