@@ -1,40 +1,30 @@
 package com.mvc.todolist.infrastructure.security;
 
 import com.mvc.todolist.domain.port.UserRepositoryPort;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.stream.Collectors;
-
 @Service
+@RequiredArgsConstructor
 public class CustomUserDetailsService implements UserDetailsService {
 
     private final UserRepositoryPort userRepositoryPort;
 
-    public CustomUserDetailsService(UserRepositoryPort userRepositoryPort) {
-        this.userRepositoryPort = userRepositoryPort;
-    }
-
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         var user = userRepositoryPort.findByUsername(username)
-                .orElseThrow(() -> {
-                    System.err.println("Usuario NO encontrado: '" + username + "'");
-                    return new UsernameNotFoundException("Usuario no encontrado: " + username);
-                });
+                .orElseThrow(() -> new UsernameNotFoundException("Usuario no encontrado: " + username));
 
         return org.springframework.security.core.userdetails.User.builder()
                 .username(user.getUsername())
                 .password(user.getPassword())
                 .authorities(user.getRoles().stream()
                         .map(role -> new SimpleGrantedAuthority(role.getName()))
-                        .collect(Collectors.toList()))
-                .accountExpired(false)
-                .accountLocked(false)
-                .credentialsExpired(false)
+                        .toList())
                 .disabled(!user.isEnabled())
                 .build();
     }
